# another-me

./: .gitignore  LICENSE  README.md  components.json  findings.md  index.html  letter.md  package.json  pnpm-lock.yaml  progress.md  tailwind.config.js  task_plan.md
.claude/: settings.local.json
.github/workflows/: build.yml
docs/: ARCH-另一个我-v1.4.md  DEV-另一个我.md  PRD-另一个我-v1.4.md
python/: .gitignore  README.md  build.py  main.py  pyproject.toml
python/another_me/nlp/: clustering.py  realism_factor.py
scripts/: bump-version.mjs
src/: App.css  App.tsx  main.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.release.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: anthropic.rs  gateway.rs  gemini.rs  mod.rs  ollama.rs  openai.rs  openai_compat.rs
src-tauri/src/commands/: export.rs  feedback.rs  history.rs  letter.rs  mod.rs  model.rs  profile.rs  settings.rs  simulate.rs  system.rs  tree.rs
src-tauri/src/engines/: butterfly.rs  causal_chain.rs  mod.rs  perturbation.rs  safety_valve.rs  self_evolution.rs
src-tauri/src/model_manager/: local_models.rs  mod.rs  ollama_health.rs
src-tauri/src/python/: mod.rs  protocol.rs  subprocess_bridge.rs
src-tauri/src/storage/: anchor_store.rs  credential_store.rs  decision_store.rs  feedback_store.rs  life_map_store.rs  mod.rs  profile_store.rs  settings_store.rs  sqlite.rs
src-tauri/src/types/: anchor.rs  decision.rs  emotion.rs  error.rs  mod.rs  profile.rs  settings.rs  timeline.rs
src-tauri/src/utils/: black_swan.rs  drama_level.rs  mod.rs  text_format.rs  tracing_init.rs
src/api/: export.ts  feedback.ts  history.ts  index.ts  model.ts  profile.ts  settings.ts  simulate.ts  system.ts  tauri.ts
src/components/common/: ConfirmDialog.tsx  EvolutionBadge.tsx  ShinePoints.tsx  SplashScreen.tsx  ThemeToggle.tsx  Toaster.tsx
src/components/history/: HistoryList.tsx  LifeMap.tsx
src/components/layout/: AppShell.tsx  Header.tsx  Sidebar.tsx
src/components/results/: DecisionTree.tsx  FeedbackButtons.tsx  FutureLetter.tsx  LifeChart.tsx  ProfileCorrectionDialog.tsx  TimelineCard.tsx
src/components/simulate/: DecisionInput.tsx  DramaSlider.tsx  ProfileCheckDialog.tsx  SimulationLoading.tsx
src/components/ui/: select.tsx
src/i18n/: index.ts
src/i18n/locales/: en.json  zh.json
src/pages/: HistoryPage.tsx  HomePage.tsx  LifeMapPage.tsx  ModelManagerPage.tsx  OnboardingPage.tsx  ResultsPage.tsx  SettingsPage.tsx  SimulatePage.tsx
src/store/: index.ts  profileStore.ts  settingsStore.ts  simulationStore.ts  uiStore.ts
src/types/: index.ts
src/utils/: export.ts  narrativeFormat.ts
tests/python/: test_bridge_protocol.py  test_clustering.py  test_realism_factor.py
